--- a/yaoyao/task_two.html
+++ b/yaoyao/task_two.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>IFE JavaScript Task Two</title>
+    <title>多个表单项的动态校验</title>
     <link rel="stylesheet" href="./css/task_two.css">
 </head>
 
